faced my fear and fixed the skill section... for now. (the display mainly works on pc so if you see it on mobile prepare for a SCARE!!!)

--- a/404.css
+++ b/404.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap'); /** HEADERS **/
 @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap'); /** TEXT **/
 
+body {
+    background-color: rgb(254, 239, 239);
+}
 
 h1 {
     font-size: 100px;
